# kaqi_description

./: CMakeLists.txt  CMakeLists.txt.user.b563fbd  README.md  package.xml
config/: kaqi_analyzers.launch  kaqi_analyzers.yaml
launch/: diagnostic_test.launch  display.launch
meshes/: base_link.stl  caster_base.stl  caster_rotate.stl  caster_wheel.stl  plate1.stl  standoff_40.stl  standoff_50.stl  standoff_8.stl  wheel76.stl
robots/: kaqi.urdf  upload_kaqi.launch
rviz/: rviz.launch  rviz.rviz
urdf/: calibrate.xacro  kaqi.gazebo.xacro  kaqi.urdf.xacro  library.urdf.xacro  materials.xacro
