<?xml version="1.0"?>
<package>
  <name>kaqi_description</name>
  <version>0.0.0</version>
  <description>The kaqi_description package</description>
  <maintainer email="lizhi1205@126.com">lizhi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
